--- a/files/memcached/memcached.conf
+++ b/files/memcached/memcached.conf
@@ -12,18 +12,18 @@
 logfile /var/log/memcached.log
 
 # Be verbose
-# -v
+-v
 
 # Be even more verbose (print client commands as well)
 # -vv
 
-# Start with a cap of 2000 megs of memory. It's reasonable, and the daemon default
+# Start with a cap of 64 megs of memory. It's reasonable, and the daemon default
 # Note that the daemon will grow to this size, but does not start out holding this much
 # memory
--m 2000
+-m 64
 
-# Default connection port is 11000 ( Wikimedia specific, general default is 11211 )
--p 11000
+# Default connection port is 11211
+-p 11211
 
 # Run the daemon as nobody. The start-memcached will default to running as root if no
 # -u command is present in this config file
@@ -32,10 +32,10 @@ logfile /var/log/memcached.log
 # Specify which IP address to listen on. The default is to listen on all IP addresses
 # This parameter is one of the only security measures that memcached has, so make sure
 # it's listening on a firewalled interface.
-# -l 0.0.0.0
+-l 0.0.0.0
 
 # Limit the number of simultaneous incoming connections. The daemon default is 1024
--c 20000
+# -c 1024
 
 # Lock down all paged memory. Consult with the README and homepage before you do this
 # -k
@@ -46,8 +46,10 @@ logfile /var/log/memcached.log
 # Maximize core file limit
 # -r
 
+# OH-TODO: Check if either of these are useful.
+
 # Minimum size allocated for key+value+flags, may not be used nor allocated, just good base value
--n 5
+# -n 5
 
 # Chunk growth factor - allows more steps and better memory efficiency too
--f 1.05
+# -f 1.05
